src/test/deca/context/invalid/affect_int_float.deca
//Test invalide: Afffectation float et int

// Resultat attendue: impossible

{
    int a = 0;
    float b = 1;
    
    a = b;
}